--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@ DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_zOi4mx9RBgQe@ep-white-leaf-
 PGHOST="ep-white-leaf-ac13rgcf-pooler.sa-east-1.aws.neon.tech"
 
 # NextAuth
-NEXTAUTH_SECRET="002303"
+NEXTAUTH_SECRET="m3zSFSXeJT+lZOwwwV9fmr5Aqy9I0gIDcLxT3v2pX/E="
 NEXTAUTH_URL="http://localhost:3000"
 
 # Cloudinary
