Add Prisma migrations to build and postinstall scripts

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma migrate deploy",
     "studio": "dotenv -e .env.local -- prisma studio",
     "seed-professions": "ts-node prisma/seed-professions.ts"
   },
