--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "swiper": "^11.2.6",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
+    "@types/swiper": "^5.4.3",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.18",
     "dotenv-cli": "^7.0.0",
