--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
+    "date-fns": "^2.30.0",
     "eslint": "^9.24.0",
     "eslint-config-next": "^15.3.1",
     "mapbox-gl": "^3.11.0",
@@ -39,6 +40,7 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.5.3",
     "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.3",
