--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # Banco de Dados
-DATABASE_URL="postgres://neondb_owner:npg_zOi4mx9RBgQe@ep-white-leaf-ac13rgcf-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL="ppostgresql://neondb_owner:npg_zOi4mx9RBgQe@ep-white-leaf-ac13rgcf-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require"
 DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_zOi4mx9RBgQe@ep-white-leaf-ac13rgcf.sa-east-1.aws.neon.tech/neondb?sslmode=require"
 PGHOST="ep-white-leaf-ac13rgcf-pooler.sa-east-1.aws.neon.tech"
 
