popup fix review

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,9 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".", // Explicitly set baseUrl
     "paths": {
-    "@/*": ["./app/*"]
+      "@/*": ["./app/*"]
     }
     
   },
