--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # Banco de Dados
-DATABASE_URL="postgresql://neondb_owner:npg_zOi4mx9RBgQe@ep-tight-boat-ac8s1z4g-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require"
-DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_zOi4mx9RBgQe@ep-white-leaf-ac13rgcf.sa-east-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL="postgresql://neondb_owner:npg_zOi4mx9RBgQe@ep-hidden-bread-acmewioy-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_zOi4mx9RBgQe@ep-hidden-bread-acmewioy-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 PGHOST="ep-white-leaf-ac13rgcf-pooler.sa-east-1.aws.neon.tech"
 
 # NextAuth
